force-app/main/default/objects/Student_Payment__c/Student_Payment__c.object-meta.xml
<CustomObject>
    <label>Student  Payment</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Student Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student  Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>