force-app/main/default/objects/Student_Payment__c/fields/Auto_Allocate_isDone__c.field-meta.xml
<CustomField>
    <fullName>Auto_Allocate_isDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Allocate isDone</label>
    <type>Checkbox</type>
</CustomField>