force-app/main/default/objects/Student_Payment__c/fields/BillDesk_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>BillDesk_Auth_Code__c</fullName>
    <label>BillDesk Auth Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>