force-app/main/default/objects/Student_Payment__c/fields/Billdesk_Url__c.field-meta.xml
<CustomField>
    <fullName>Billdesk_Url__c</fullName>
    <label>Billdesk Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>