force-app/main/default/objects/Student_Payment__c/fields/Cheque_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bank_Name__c</fullName>
    <label>Cheque Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>