force-app/main/default/objects/Student_Payment__c/fields/ChequeDD_Number__c.field-meta.xml
<CustomField>
    <fullName>ChequeDD_Number__c</fullName>
    <label>Cheque/DD Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>