force-app/main/default/objects/Student_Payment__c/fields/ChequeDD_Realisation_Date__c.field-meta.xml
<CustomField>
    <fullName>ChequeDD_Realisation_Date__c</fullName>
    <label>Cheque/DD Realisation Date</label>
    <type>Date</type>
</CustomField>