force-app/main/default/objects/Student_Payment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Student, Applicant,Non Teaching,Alumni,Professor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student  Payments</relationshipLabel>
    <relationshipName>Student_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>