force-app/main/default/objects/Student_Payment__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>