force-app/main/default/objects/Student_Payment__c/fields/Mode_of_Payment_with_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment_with_Payment_Gateway__c</fullName>
    <formula>IF(
ISPICKVAL( Payment_Gateway__c ,&quot;Razorpay&quot;),&quot;Razorpay&quot;,
IF(
ISPICKVAL( Payment_Gateway__c ,&quot;Eazypay&quot;),&quot;Eazypay&quot;,
IF(
ISPICKVAL( Payment_Gateway__c ,&quot;Billdesk&quot;),&quot;Billdesk&quot;,
IF(
ISPICKVAL( Payment_Gateway__c ,&quot;Paytm&quot;),&quot;Paytm&quot;,&quot;Offline&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode of Payment with Payment Gateway</label>
    <type>Text</type>
</CustomField>