force-app/main/default/objects/Student_Payment__c/fields/Offline_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Offline_Receipt_Number__c</fullName>
    <label>Offline Receipt Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>