force-app/main/default/objects/Student_Payment__c/fields/Online_Receipt_Number1__c.field-meta.xml
<CustomField>
    <fullName>Online_Receipt_Number1__c</fullName>
    <formula>Online_Receipt_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Receipt Number</label>
    <type>Text</type>
</CustomField>