force-app/main/default/objects/Student_Payment__c/fields/Online_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Online_Receipt_Number__c</fullName>
    <displayFormat>RU/2024-2025/{0000000}</displayFormat>
    <label>Online Receipt Number</label>
    <type>AutoNumber</type>
</CustomField>