force-app/main/default/objects/Student_Payment__c/fields/Partial_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partial_Booking_Fee__c</fullName>
    <label>Partial Booking Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>