force-app/main/default/objects/Student_Payment__c/fields/Payment_Date1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date1__c</fullName>
    <inlineHelpText>For offline payments through reference number.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>