force-app/main/default/objects/Student_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date of payment</description>
    <formula>DATEVALUE(Payment_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of payment</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>