force-app/main/default/objects/Student_Payment__c/fields/Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>Payment_Url__c</fullName>
    <label>Payment Url</label>
    <type>Url</type>
</CustomField>