force-app/main/default/objects/Student_Payment__c/fields/Pending_Booking_Fee_FF__c.field-meta.xml
<CustomField>
    <fullName>Pending_Booking_Fee_FF__c</fullName>
    <formula>Amount__c -  Partial_Booking_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Booking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>