force-app/main/default/objects/Student_Payment__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Student  Payments</relationshipLabel>
    <relationshipName>Student_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>