force-app/main/default/objects/Student_Payment__c/fields/Pushed_to_Tally__c.field-meta.xml
<CustomField>
    <fullName>Pushed_to_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed to Tally</label>
    <type>Checkbox</type>
</CustomField>