force-app/main/default/objects/Student_Payment__c/fields/Razorpay_Signature__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Signature__c</fullName>
    <label>Razorpay Signature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>