force-app/main/default/objects/Student_Payment__c/fields/Receipt_Generated_by__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Generated_by__c</fullName>
    <label>Receipt Generated by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>