force-app/main/default/objects/Student_Payment__c/fields/Receipt_Generated_on__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Generated_on__c</fullName>
    <label>Receipt Generated on</label>
    <type>Date</type>
</CustomField>