force-app/main/default/objects/Student_Payment__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <displayFormat>ORD{000000}</displayFormat>
    <label>Ref. No</label>
    <type>AutoNumber</type>
</CustomField>