force-app/main/default/objects/Student_Payment__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>