force-app/main/default/objects/Student_Payment__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Contact__r.School__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>