force-app/main/default/objects/Student_Payment__c/fields/Split_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Split_Booking_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Booking Fee</label>
    <type>Checkbox</type>
</CustomField>