force-app/main/default/objects/Student_Payment__c/fields/Split_Validation__c.field-meta.xml
<CustomField>
    <fullName>Split_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Validation</label>
    <type>Checkbox</type>
</CustomField>