force-app/main/default/objects/Student_Payment__c/fields/Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Time__c</fullName>
    <label>Transaction Date Time(Technical)</label>
    <type>DateTime</type>
</CustomField>