force-app/main/default/objects/Student_Payment__c/validationRules/Prevent_0_value_in_the_Partial_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_0_value_in_the_Partial_Amount</fullName>
    <active>false</active>
    <description>This rule will prevent user to enter Partial Amount as 0</description>
    <errorConditionFormula>Partial_Booking_Fee__c = 0</errorConditionFormula>
    <errorDisplayField>Partial_Booking_Fee__c</errorDisplayField>
    <errorMessage>Please enter amount greater than 0</errorMessage>
</ValidationRule>