force-app/main/default/objects/Student_Payment__c/validationRules/Prevent_Amount_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Amount_Edit</fullName>
    <active>true</active>
    <description>Prevents editing of Amount if Split Booking Fee is not checked.</description>
    <errorConditionFormula>AND(
NOT(Split_Booking_Fee__c),
ISCHANGED( Amount__c )
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>You cannot edit Minimum Amount, Please Select Split Booking Fee to Edit.</errorMessage>
</ValidationRule>