force-app/main/default/objects/Student_Payment__c/validationRules/Prevent_Partial_Amount_with_Amount_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Partial_Amount_with_Amount_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Partial_Booking_Fee__c &gt; Amount__c</errorConditionFormula>
    <errorDisplayField>Partial_Booking_Fee__c</errorDisplayField>
    <errorMessage>Partial Amount should be less than the Actual Amount.</errorMessage>
</ValidationRule>