force-app/main/default/objects/Student_Payment__c/validationRules/Prevent_Partial_Pending_Booking_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Partial_Pending_Booking_Fee</fullName>
    <active>false</active>
    <description>Prevent blank Partial Pending Booking Fee when Split Booking Fee is Checked</description>
    <errorConditionFormula>AND(
ISBLANK( Partial_Booking_Fee__c ),
Split_Booking_Fee__c = TRUE
)</errorConditionFormula>
    <errorMessage>Partial Pending Booking Fee cannot be blank when Split Booking Fee is selected.</errorMessage>
</ValidationRule>