force-app/main/default/objects/Student_Payment__c/validationRules/Prevent_Pending_Booking_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Pending_Booking_Fee</fullName>
    <active>false</active>
    <description>Prevent blank Pending Booking Fee when Split Booking Fee is Checked</description>
    <errorConditionFormula>AND(
ISBLANK(Pending_Booking_Fee__c),
Split_Booking_Fee__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Pending_Booking_Fee__c</errorDisplayField>
    <errorMessage>Pending Booking Fee cannot be blank when Split Booking Fee is selected.</errorMessage>
</ValidationRule>