force-app/main/default/objects/Student_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>SRN_Number__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Auto_Allocate__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Payment_Mode_Type__c</columns>
    <columns>Offline_Receipt_Number__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Payment_Date_Time__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Jayanthi S</value>
    </filters>
    <label>All</label>
</ListView>