force-app/main/default/objects/Student_Payment__c/listViews/Billdesk.listView-meta.xml
<ListView>
    <fullName>Billdesk</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>SRN_Number__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Payment_Mode_Type__c</columns>
    <columns>Online_Receipt_Number__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Payment_Date_Time__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Gateway__c</field>
        <operation>equals</operation>
        <value>Billdesk</value>
    </filters>
    <label>Billdesk</label>
</ListView>