force-app/main/default/objects/Student_Payment__c/listViews/Offline_PAF_Payment_link_Card_swipe.listView-meta.xml
<ListView>
    <fullName>Offline_PAF_Payment_link_Card_swipe</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 ) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Reference_Number__c</columns>
    <columns>Payment_Mode_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Receipt_Generated_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode_of_Payment__c</field>
        <operation>equals</operation>
        <value>Offline</value>
    </filters>
    <filters>
        <field>Fee_Type__c</field>
        <operation>notEqual</operation>
        <value>Application Fee</value>
    </filters>
    <filters>
        <field>Payment_Mode_Type__c</field>
        <operation>equals</operation>
        <value>Payment link</value>
    </filters>
    <filters>
        <field>Payment_Mode_Type__c</field>
        <operation>equals</operation>
        <value>Card swipe</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Offline PAF - Payment link/Card swipe</label>
</ListView>