force-app/main/default/objects/Student_Payment__c/listViews/Offline_PAF_Pending_Cheque_DD.listView-meta.xml
<ListView>
    <fullName>Offline_PAF_Pending_Cheque_DD</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Offline_Receipt_Number__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode_of_Payment__c</field>
        <operation>equals</operation>
        <value>Offline</value>
    </filters>
    <filters>
        <field>Fee_Type__c</field>
        <operation>notEqual</operation>
        <value>Application Fee</value>
    </filters>
    <filters>
        <field>Payment_Mode_Type__c</field>
        <operation>equals</operation>
        <value>Cheque / DD</value>
    </filters>
    <label>Offline PAF - Pending Cheque/ DD</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Finance_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>