force-app/main/default/objects/Student_Payment__c/listViews/Offline_Pending_NEFT_RTGS.listView-meta.xml
<ListView>
    <fullName>Offline_Pending_NEFT_RTGS</fullName>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>Payment_Mode_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode_of_Payment__c</field>
        <operation>equals</operation>
        <value>Offline</value>
    </filters>
    <filters>
        <field>Fee_Type__c</field>
        <operation>notEqual</operation>
        <value>Application Fee</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Payment_Mode_Type__c</field>
        <operation>equals</operation>
        <value>NEFT / RTGS</value>
    </filters>
    <label>Offline Pending - NEFT/RTGS</label>
</ListView>