force-app/main/default/objects/Student_Payment__c/listViews/Payments_Success.listView-meta.xml
<ListView>
    <fullName>Payments_Success</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>SRN_Number__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Payment_Mode_Type__c</columns>
    <columns>Online_Receipt_Number__c</columns>
    <columns>Offline_Receipt_Number__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Payment_Date_Time__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Success Payments</label>
</ListView>